added option to hide video after showing it

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 		<p>
 			<input type='button' id='btnNext' onclick='playNext();' value='Play Next &raquo;'>
 			<input type='button' id='btnShowVideo' onclick='showVideo();' value='Show Video'>
+			<input type='button' id='btnShowVideo' onclick='showVideo();' value='Hide Video' style="display:none;">
+			
 		</p>
 		
 		<img src='' style='float:right;' id='albumCover'/>
