--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 		
 		<p>
 			<input type='button' id='btnNext' onclick='playNext();' value='Play Next &raquo;'>
-			<input type='button' id='btnShowVideo' onclick='showVideo();' value='Show Video'>
-			<input type='button' id='btnShowVideo' onclick='showVideo();' value='Hide Video' style="display:none;">
+			<input type='button' id='btnShowVideo' onclick='showVideo();' value='Show/Hide Video'>
 			
 		</p>
 		
