--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-	<script src="js/libs/modernizr-2.0.6.min.js"></script>
-
 </head>
 <body>
 
@@ -31,7 +29,7 @@
 	<div id="main" role="main">
 		<div id='search'>
 			<input type='text' name='q' id='q' value='Type an artist or song name'/>
-			<div id='searchLoading' style='display:none'></div>
+			<div id='searchLoading' style='display:none'>loading</div>
 
 			<div id='searchResults' display='none' class='resultContainer'>
 			</div>
@@ -80,7 +78,7 @@
 
 			<img src='' style='float:right;' id='albumCover'/>
 
-			<div id='suggestionLoading' style='display:none'></div>
+			<div id='suggestionLoading' style='display:none'>loading</div>
 			<div id='suggestions' style='display:none;' class='resultContainer'>
 				<div class='heading'>What's next?</div>
 				<div id='suggestionResults'>
@@ -97,21 +95,14 @@
 	
 	</div> <!--! end of #container -->
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 	<script src="js/settings.js" type="text/javascript"></script>
 
 	<script src="js/youtubestuff.js" type="text/javascript"></script>
 
 	<script src="js/app.js" type="text/javascript"></script>
-
-	<script src="js/libs/spin.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var spinner = new Spinner(spinner_opts).spin(spinner_target);
-		var spinner = new Spinner(spinner_opts).spin(spinner_target_2);
-	</script>
-	
+		
     <!-- Piwik --> 
 	<script type="text/javascript">
 	var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.batu.me/" : "http://stats.batu.me/");
