--- a/index.html
+++ b/index.html
@@ -61,21 +61,14 @@
 			<div style='display:none' id='info'>
 
 				<div class="actions">
-
-				</div>
-				<div class="actions">
 					<a id="play" class="btn primary">Play</a>
 					<a id="pause" class="btn primary">Pause</a>
 					<input type='button' id='btnNext' onclick='playNext();' class="btn" value='Play Next &raquo;'>
 					<input type='button' id='btnShowVideo' onclick='showVideo();' class="btn" value='Show/Hide Video'>
-					
-
 				</div>
 
 				<img src='' style='float:right;' id='albumCover'/>
 
-
-				<div id='suggestionLoading' style='display:none'><img src='img/ajax.gif'/></div>
 				<div id='suggestions' style='display:none;' class='resultContainer'>
 					<h3>What's next?</h3>
 					<div id='suggestionResults'>
@@ -89,10 +82,9 @@
 		
 	    <footer class="footer">
 	      <div class="container">
-	        <p class="pull-right"><img id='searchLoading' style='display:none' src='img/ajax.gif'/></p>
+	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
 	        <p>
-	          Designed and built with all the love in the world <a href="http://twitter.com/twitter" target="_blank">@twitter</a> by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.<br />
-	          Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
+	          (c) <a href="http://batu.me/1">batuhan içöz</a>
 	        </p>
 	      </div>
 	    </footer>
