--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="actions">
 					<a id="play" class="btn primary">Play</a>
 					<a id="pause" class="btn primary">Pause</a>
-					<input type='button' id='btnNext' onclick='playNext();' class="btn" value='Play Next &raquo;'>
+					<input type='button' id='btnNext' onclick='playNext();' class="btn" value='Skip &raquo;'>
 					<input type='button' id='btnShowVideo' onclick='showVideo();' class="btn" value='Show/Hide Video'>
 				</div>
 
@@ -95,7 +95,7 @@
             <h3>About Batuhan's Radyo</h3>
           </div>
           <div class="modal-body">
-            <p>Lorem ipsum? Nope! Just Chuck Testa!</p>
+            <p>IS IT MAGIC? Nope! Just Chuck Testa!</p>
           </div>
         </div>
 
