--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <a class="brand" href="#">Batuhan's Radyo</a>
           <ul class="nav">
-            <li class="active"><a href="http://static.batu.me/">Home</a></li>
+            <li class="active"><a href="http://static.batu.me/radyo/">Home</a></li>
             <li><a data-controls-modal="modal-about" data-backdrop="true" data-keyboard="true">About</a></li>
             <li><a href="https://github.com/batuhanicoz/radyo">Source</a></li>
           </ul>
