--- a/index.html
+++ b/index.html
@@ -108,5 +108,17 @@
     <script type="text/javascript" src="js/bootstrap-modal.js"></script>
 
     <script type="text/javascript" src="js/youtube.js"></script>
+	<!-- Piwik --> 
+	<script type="text/javascript">
+	var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.batu.me/" : "http://stats.batu.me/");
+	document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+	</script><script type="text/javascript">
+	try {
+	var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 4);
+	piwikTracker.trackPageView();
+	piwikTracker.enableLinkTracking();
+	} catch( err ) {}
+	</script><noscript><p><img src="http://stats.batu.me/piwik.php?idsite=4" style="border:0" alt="" /></p></noscript>
+	<!-- End Piwik Tracking Code -->
   </body>
 </html>
