--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		        <p><strong>Heads up!</strong> This application is still in development. May and will break.</p>
 		      </div>
 		      <h3>What is this?</h3>
-		      <p>Batuhan's Radyo<span class="label">ALFA</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
+		      <p><span class="label">Batuhan's Radyo Alfa</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
 		
 			<div id='search'>
 				<div id='searchResults' display='none' class='resultContainer'>
