--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
 		        <a class="close" href="#">&times;</a>
 		        <p><strong>Heads up!</strong> This application is still in development. May and will break.</p>
 		      </div>
+			<div id="what">
 		      <h3>What is this?</h3>
 		      <p><span class="label">Batuhan's Radyo Alfa</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
-		
+			</div>
 			<div id='search'>
+				<div class="alert-message block-message warning" id="noresults">
+				  <a class="close" href="#">×</a>
+				  <p><strong>I couldn't find anything!</strong> There is a song about EVERYTHING but your search mate. Please check your spelling and your life, then try again.</p>
+				</div>
+				
 				<div id='searchResults' display='none' class='resultContainer'>
 				</div>
 			</div>
@@ -47,7 +53,7 @@
 			<!-- the player -->
 			<div id='playerDiv'>
 		      <div id='displayDiv'>
-		        <div id='title'></div>
+		        <h2 id='title'></h2>
 		        <div id='player'></div>
 		      </div>
 		      <div id='controlDiv'>
