--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		      <p><span class="label">Batuhan's Radyo Alfa</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
 			</div>
 			<div id='search'>
-				<div class="alert-message block-message warning" id="noresults">
+				<div class="alert-message block-message warning" id="noresults" style="display:none">
 				  <a class="close" href="#">×</a>
 				  <p><strong>I couldn't find anything!</strong> There is a song about EVERYTHING but your search mate. Please check your spelling and your life, then try again.</p>
 				</div>
