cleanup & added copyright texts

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a data-controls-modal="modal-about" data-backdrop="true" data-keyboard="true">About</a></li>
             <li><a href="https://github.com/batuhanicoz/radyo">Source</a></li>
           </ul>
-		  <input type='text' name='q' id='q' value='Type an artist or song name'/>
+		  <div id="topbar_search">
+		  	<input type='text' name='q' id='q' value='Type an artist or song name'/>
+		  </div>
         </div>
       </div>
     </div>
@@ -38,7 +40,7 @@
 		      </div>
 			<div id="what">
 		      <h3>What is this?</h3>
-		      <p><span class="label">Batuhan's Radyo Alfa</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
+		      <p><span class="label">Radyo</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
 			</div>
 			<div id='search'>
 				<div class="alert-message block-message warning" id="noresults" style="display:none">
@@ -94,7 +96,7 @@
 	      <div class="container">
 	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
 	        <p>
-	          (c) <a href="http://batu.me/1">batuhan içöz</a>
+	         originally code by <a href="http://ahmetalpbalkan.com">ahmet alp balkan</a> (<a href="https://github.com/ahmetalpbalkan/radyo">on github</a>) and modified by <a href="http://batu.me/1">batuhan içöz</a>.
 	        </p>
 	      </div>
 	    </footer>
@@ -102,10 +104,10 @@
 	    <div id="modal-about" class="modal hide fade">
           <div class="modal-header">
             <a href="#" class="close">&times;</a>
-            <h3>About Batuhan's Radyo</h3>
+            <h3>About Radyo</h3>
           </div>
           <div class="modal-body">
-            <p>IS IT MAGIC? Nope! Just Chuck Testa!</p>
+            <p>This is a fork of <a href="http://ahmetalpbalkan.com">Ahmet Alp Balkan</a>'s <a href="https://github.com/ahmetalpbalkan/radyo">Radyo</a>. Modified and improved by <a href="http://batu.me/1">batuhan içöz</a>. </p>
           </div>
         </div>
 
