--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	      <div class="container">
 	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
 	        <p>
-	         originally code by <a href="http://ahmetalpbalkan.com">ahmet alp balkan</a> (<a href="https://github.com/ahmetalpbalkan/radyo">on github</a>) and modified by <a href="http://batu.me/1">batuhan içöz</a>.
+	         original code by <a href="http://ahmetalpbalkan.com">ahmet alp balkan</a> (<a href="https://github.com/ahmetalpbalkan/radyo">on github</a>) and modified by <a href="http://batu.me/1">batuhan içöz</a>.
 	        </p>
 	      </div>
 	    </footer>
