--- a/index.html
+++ b/index.html
@@ -5,25 +5,10 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
     <link type='text/css' href='css/style.css' rel='stylesheet'>
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-11142497-5']);
-	  _gaq.push(['_setDomainName', 'batu.me']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-
-	</script>
   </head>
   
   <body>
-	<!-- a class='github' target='_blank' href='http://github.com/batuhanicoz/radyo'>Fork me on GitHub</a -->
-	
+		
 	<div class="topbar">
       <div class="fill">
         <div class="container">
@@ -48,14 +33,11 @@
 
 		  <div class="row">
 		    <div class="span11">
-			  <div class="alert-message info">
-		        <a class="close" href="#">&times;</a>
-		        <p><strong>Heads up!</strong> This application is still in development. May and will break.</p>
-		      </div>
-			<div id="what">
-		      <h3>What is this?</h3>
-		      <p><span class="label">Radyo</span> plays similar tracks one after another. Just write some song or singer to the search thingy on the topbar!</p>
-			</div>
+				<div class="alert-message info">
+			        <p><strong>Heads up!</strong> This application is still in development. May and will break.</p>
+			    </div>
+			
+						
 			<div id='search'>
 				<div class="alert-message block-message warning" id="noresults" style="display:none">
 				  <a class="close" href="#">×</a>
@@ -74,30 +56,59 @@
 		      </div>
 		      <div id='controlDiv'>
 		        <div id='seekDiv'>
-		          <span id='currentTime'>0:00</span> / <span id='duration'>0:00</span>
-		          <input type='range' id='seek' title="Seek" min='0' max='0' step='1' value='0'></input>
-		        </div>
-		        <div id='volumeDiv'>
-		          <label for='volume'>Volume</label>
-		          <input type='range' id='volume' title="Volume" min='0' max='100' step='1' value='100'></input>
+		          <input type='range' class="range" id='seek' title="Seek" min='0' max='0' step='1' value='0'></input>
 		        </div>
 		      </div>
 		    </div>
 			<!-- / player bitti -->
 			<div style='display:none' id='info'>
 
-				<div class="actions">
-					<a id="play" class="btn primary">Play</a>
-					<a id="pause" class="btn primary">Pause</a>
-					<input type='button' id='btnNext' onclick='playNext();' class="btn" value='Skip &raquo;'>
-					<input type='button' id='btnShowVideo' onclick='showVideo();' class="btn" value='Show/Hide Video'>
+				<div class="actions" id="controls">
+					<p>
+						<span class="label">
+							<span id='currentTime'>0:00</span> / <span id='duration'>0:00</span>
+						</span>
+						&nbsp;
+						<span class="label">
+							Source: <span id="source"></span>
+						</span>
+					</p>
+					<p>
+						<a id="play" class="btn primary">Play</a>
+						<a id="pause" class="btn primary">Pause</a>
+						<a id='btnShowVolume' onclick='showVolume();' class="btn">Volume</a>
+						<input type='button' id='btnShowVideo' onclick='showVideo();' class="btn" value='Show Video'>
+						<input type='button' id='btnHideVideo' onclick='showVideo();' class="btn" style="display:none" value='Hide Video'>
+						<input type='button' id='btnNext' onclick='playNext();' class="btn" value='Next &raquo;'>
+					</p>
+					<p id="volume_div" style="display:none">
+						<input type='range' class="range" id='volume' title="Volume" min='0' max='100' step='1' value='100'></input>
+					</p>
 				</div>
-
-				<img src='' style='float:right;' id='albumCover'/>
-
-				<div id='suggestions' style='display:none;' class='resultContainer'>
-					<h3>What's next?</h3>
-					<div id='suggestionResults'>
+				<div class="span5" style="display:none">
+					<h3>Playing now</h3>
+					<ul class="media-grid">
+					  <li>
+					    <a href="">
+					      <img class="thumbnail" src="" id="albumCover" alt="">
+					    </a>
+					  </li>
+					</ul>
+					<h5 id='title'></h5>
+				</div>
+				<div class="row">
+			    	<div class="span11">
+						<div id='suggestions' style='display:none;' class='resultContainer'>
+							<h3>What's next?</h3>
+							<ul id="suggestionResults" class="media-grid">
+							</ul>
+						</div>
+						<div class="alert-message block-message warning" id="nosuggestions" style="display:none">
+						  <p><strong>We couldn't find any suggestions!</strong> Please try again with a more known song.</p>
+						</div>
+						<div style="display:none">
+							<span id="suggestions_skip_link"></span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -109,9 +120,6 @@
 	    <footer class="footer">
 	      <div class="container">
 	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
-			<p>
-				<div class="fb-like" data-href="http://static.batu.me/radyo" data-send="true" data-width="450" data-show-faces="true"></div>
-			</p>
 	        <p>
 	         original code by <a href="http://ahmetalpbalkan.com">ahmet alp balkan</a> (<a href="https://github.com/ahmetalpbalkan/radyo">on github</a>) and modified by <a href="http://batu.me/1">batuhan içöz</a>.
 	        </p>
@@ -124,31 +132,45 @@
             <h3>About Radyo</h3>
           </div>
           <div class="modal-body">
-            <p>This is a fork of <a href="http://ahmetalpbalkan.com">Ahmet Alp Balkan</a>'s <a href="https://github.com/ahmetalpbalkan/radyo">Radyo</a>. Modified and improved by <a href="http://batu.me/1">batuhan içöz</a>. </p>
+            <p>This is a fork of <a href="http://ahmetalpbalkan.com">Ahmet Alp Balkan</a>'s <a href="https://github.com/ahmetalpbalkan/radyo">Radyo</a>. Modified and improved by <a href="http://batu.me/1">batuhan içöz</a>.</p>
           </div>
         </div>
-
+		
     </div>
-  	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+  	<script src="http//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var lastFmApiKey = "6a040e6842f5c100c5a9816c4e28cdaf";
 	</script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/bootstrap-modal.js"></script>
 
+    <script type="text/javascript" src="js/bootstrap-twipsy.js"></script>
+	<script>
+      $(function () {
+        $("a[rel=twipsy]").twipsy({
+          live: true
+        })
+      })
+    </script>
     <script type="text/javascript" src="js/bootstrap-alerts.js"></script>
 	<script type="text/javascript">
 		$(".alert-message").alert()
 	</script>
 	
     <script type="text/javascript" src="js/youtube.js"></script>
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) {return;}
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=250987194917493";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-11142497-5']);
+	  _gaq.push(['_setDomainName', 'batu.me']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
   </body>
 </html>
