--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 		
     </div>
-  	<script src="http//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+  	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var lastFmApiKey = "6a040e6842f5c100c5a9816c4e28cdaf";
 	</script>
