added modal script

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a class="brand" href="#">Batuhan's Radyo</a>
           <ul class="nav">
             <li class="active"><a href="http://static.batu.me/radyo/">Home</a></li>
-            <li><a data-controls-modal="modal-about" data-backdrop="true" data-keyboard="true">About</a></li>
+            <li><a href="#" data-controls-modal="modal-about" data-backdrop="static">About</a></li>
             <li><a href="https://github.com/batuhanicoz/radyo">Source</a></li>
           </ul>
 		  <div id="topbar_search">
@@ -155,7 +155,8 @@
 	<script type="text/javascript">
 		$(".alert-message").alert()
 	</script>
-	
+	<script type="text/javascript" src="js/bootstrap-modal.js"></script>
+    
     <script type="text/javascript" src="js/youtube.js"></script>
 
 	<script type="text/javascript">
