added fork me on github badge

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   
   <body>
+	
+	<a href="http://github.com/batuhanicoz/radyo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
 		
 	<div class="topbar">
       <div class="fill">
@@ -132,7 +134,22 @@
             <h3>About Radyo</h3>
           </div>
           <div class="modal-body">
-            <p>This is a fork of <a href="http://ahmetalpbalkan.com">Ahmet Alp Balkan</a>'s <a href="https://github.com/ahmetalpbalkan/radyo">Radyo</a>. Modified and improved by <a href="http://batu.me/1">batuhan içöz</a>.</p>
+	
+            <h4>What is it?</h4>
+
+			<p>Radyo is a JavaScript player which plays similar songs one after another using Last.fm's API and YouTube.</p>
+
+			<h4>Who created this?</h4>
+
+			<p>This was <a href="https://github.com/ahmetalpalkan/radyo" title="Original Repo">originally</a> created by <a href="https://github.com/ahmetalpalkan" title="Ahmet Alp's Github Profile">Ahmet Alp Balkan</a>.</p>
+
+			<h4>So, who maintains this repo?</h4>
+
+			<p><a href="https://github.com/batuhanicoz/radyo" title="Batuhan's Repo of Radyo">This</a> repo maintains by <a href="https://github.com/batuhanicoz" title="Batuhan İçöz's Github Profile">Batuhan İçöz</a> </p>
+
+			<h4>License</h4>
+
+			<p>This code is licensed with GNU GPL v2. (details are included in LICENSE file)</p>
           </div>
         </div>
 		
