--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <body>
 	
-	<a href="http://github.com/batuhanicoz/radyo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
+	<a href="http://github.com/batuhanicoz/radyo"><img style="position: absolute; top: 30px; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
 		
 	<div class="topbar">
       <div class="fill">
@@ -123,7 +123,7 @@
 	      <div class="container">
 	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
 	        <p>
-	         original code by <a href="http://ahmetalpbalkan.com">ahmet alp balkan</a> (<a href="https://github.com/ahmetalpbalkan/radyo">on github</a>) and modified by <a href="http://batu.me/1">batuhan içöz</a>.
+				<a href="#" data-controls-modal="modal-about" data-backdrop="static">About Radyo</a></li> - <a href="https://github.com/batuhanicoz/radyo">Source code on Github</a> - <a href="http://batu.me/contact">Contact</a>
 	        </p>
 	      </div>
 	    </footer>
