--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
 	      <div class="container">
 	        <p class="pull-right"><img id='loading' style='display:none' src='img/ajax.gif'/></p>
 	        <p>
+				<div class="fb-like" data-href="http://static.batu.me/radyo" data-send="true" data-width="450" data-show-faces="true"></div>
+			</p>
+			<p>
 				<a href="#" data-controls-modal="modal-about" data-backdrop="static">About Radyo</a></li> - <a href="https://github.com/batuhanicoz/radyo">Source code on Github</a> - <a href="http://batu.me/contact">Contact</a>
 	        </p>
 	      </div>
@@ -150,10 +153,24 @@
 			<h4>License</h4>
 
 			<p>This code is licensed with GNU GPL v2. (details are included in LICENSE file)</p>
+			
+			<h4>Like it on Facebook!</h4>
+			<p><div class="fb-like" data-href="http://static.batu.me/radyo" data-send="true" data-width="450" data-show-faces="true"></div></p>
+			
+			<p>
           </div>
         </div>
 		
     </div>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) {return;}
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=250987194917493";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var lastFmApiKey = "6a040e6842f5c100c5a9816c4e28cdaf";
