--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         var lastFmApiKey = "6a040e6842f5c100c5a9816c4e28cdaf";
     </script>
